Updated the categories with Month property
Updated the categories with Month property

--- a/MyExpenseTracker/MyExpenseTracker/MyExpenseTracker.csproj
+++ b/MyExpenseTracker/MyExpenseTracker/MyExpenseTracker.csproj
@@ -38,6 +38,9 @@
     <EmbeddedResource Update="OverviewPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Trends.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="WelcomePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
